fix: issue on mobile size

--- a/src/components/cart/SCSS/cartModal.scss
+++ b/src/components/cart/SCSS/cartModal.scss
@@ -175,7 +175,7 @@
 .modal-container-mobile {
   padding: 25px 15px;
   width: 100%;
-  height: 100%;
+  height: 5%;
   &__close {
     position: absolute;
     right: 1rem;
